Minor template/css fixes to prevent info displaying off screen - Reduced size of weather summary - Reduced margins around the hourly-timeline

--- a/home/static/home/sass/weather.scss
+++ b/home/static/home/sass/weather.scss
@@ -25,6 +25,7 @@
 	}
 
 	.hourly-weather {
+		margin-bottom: 0;
 
 		> .hour {
 			&:first-child {
